--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.2"
+    "mongoose": "^6.3.2",
+    "socket.io": "^4.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
