--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,15 @@
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "core-js": "^3.8.3",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
     "element-plus": "^2.2.0",
     "js-cookie": "^3.0.1",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "socket.io-client": "^4.5.0",
-    "stream": "0.0.2",
+    "stream-browserify": "^3.0.0",
     "uuid": "^8.3.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
